# samples

./: README.md  SECURITY.md
a2a/: README.md
a2a/business_agent/: README.md  env.example  pyproject.toml
a2a/business_agent/src/business_agent/: agent.py  agent_executor.py  constants.py  main.py  payment_processor.py  store.py  ucp_profile_resolver.py
a2a/business_agent/src/business_agent/a2a_extensions/: __init__.py  base_extension.py  ucp_extension.py
a2a/business_agent/src/business_agent/data/: agent_card.json  products.json  ucp.json
a2a/business_agent/src/business_agent/helpers/: __init__.py  type_generator.py
a2a/business_agent/src/business_agent/models/: product_types.py
a2a/chat-client/: App.tsx  README.md  config.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
a2a/chat-client/components/: BotLogo.tsx  ChatInput.tsx  ChatMessage.tsx  Checkout.tsx  Header.tsx  PaymentConfirmation.tsx  PaymentMethodSelector.tsx  ProductCard.tsx  UserLogo.tsx
a2a/chat-client/mocks/: credentialProviderProxy.ts
a2a/chat-client/profile/: agent_profile.json
rest/nodejs/: package-lock.json  package.json
rest/nodejs/src/: index.ts
rest/nodejs/src/data/: index.ts
rest/python/client/flower_shop/: README.md  extract_json_dialog.sh  pyproject.toml  simple_happy_path_client.py
rest/python/client/flower_shop/sample_output/: happy_path_dialog.md
rest/python/server/: README.md  config.py  db.py  dependencies.py  dump_inventory.py  dump_log.py  dump_transactions.py  enums.py  exceptions.py  import_csv.py  integration_test.py  models.py  pyproject.toml  server.py
rest/python/server/generated_routes/: ucp_routes.py
rest/python/server/routes/: discovery.py  discovery_profile.json  order.py  ucp_implementation.py
rest/python/server/services/: checkout_service.py  fulfillment_service.py
rest/python/test_data/flower_shop/: addresses.csv  customers.csv  discounts.csv  inventory.csv  payment_instruments.csv  products.csv  promotions.csv  shipping_rates.csv
